--- a/demo/safariui.html
+++ b/demo/safariui.html
@@ -3,18 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Safari Liquid - Pro Recovery</title>
+    <title>Safari Liquid - Ultimate Dark Mode</title>
     <style>
         :root {
-            --glass: rgba(255, 255, 255, 0.92);
+            /* 淺色模式變數 */
+            --glass: rgba(255, 255, 255, 0.85);
             --inner: rgba(0, 0, 0, 0.05);
+            --text: #000000;
             --accent: #007AFF;
+            --shadow: rgba(0, 0, 0, 0.15);
             --fluid-ease: cubic-bezier(0.4, 0, 0.2, 1);
+            --menu-bg: #ffffff;
+        }
+
+        /* 深色模式偵測 */
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --glass: rgba(40, 40, 40, 0.75);
+                --inner: rgba(255, 255, 255, 0.1);
+                --text: #ffffff;
+                --accent: #0A84FF;
+                --shadow: rgba(0, 0, 0, 0.4);
+                --menu-bg: #1c1c1e;
+            }
+            body { background: #000 !important; }
         }
 
         body { 
-            margin: 0; background: #fff; overflow-x: hidden; overflow-y: auto;
-            font-family: -apple-system, system-ui;
+            margin: 0; background: #f2f2f7; overflow-x: hidden; overflow-y: auto;
+            font-family: -apple-system, system-ui; transition: background 0.3s;
         }
 
         #web-wrapper { width: 100%; height: 5000px; position: relative; z-index: 1; }
@@ -25,7 +42,7 @@
             background: rgba(0,0,0,0); z-index: 10000; display: none;
             transition: background 0.4s; touch-action: none;
         }
-        .is-menu-open #global-overlay { display: block; background: rgba(0,0,0,0.4); pointer-events: auto; }
+        .is-menu-open #global-overlay { display: block; background: rgba(0,0,0,0.5); pointer-events: auto; }
 
         .safari-wrapper {
             position: fixed; bottom: calc(30px + env(safe-area-inset-bottom)); 
@@ -40,10 +57,11 @@
             touch-action: none;
         }
 
+        /* 主底色 */
         .main-bg {
             position: absolute; width: 100%; height: 100%;
             background: var(--glass); backdrop-filter: blur(30px); -webkit-backdrop-filter: blur(30px);
-            border-radius: 35px; box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+            border-radius: 35px; box-shadow: 0 10px 30px var(--shadow);
             transition: all 0.5s var(--fluid-ease); z-index: 1;
         }
 
@@ -55,14 +73,14 @@
         }
 
         .left-header { height: 44px; width: 100%; display: flex; align-items: center; justify-content: center; gap: 8px; flex-shrink: 0; }
-        .favicon { width: 18px; height: 18px; border-radius: 4px; }
-        .domain-text { color: #000; font-weight: 500; font-size: 15px; }
+        .favicon { width: 18px; height: 18px; border-radius: 4px; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.1)); }
+        .domain-text { color: var(--text); font-weight: 500; font-size: 15px; }
 
         .menu-content {
             width: 100%; opacity: 0; visibility: hidden;
             display: flex; flex-direction: column; gap: 15px; padding: 15px 0; transition: 0.3s;
         }
-        .menu-item { display: flex; align-items: center; gap: 12px; padding: 0 15px; color: #000; font-size: 16px; }
+        .menu-item { display: flex; align-items: center; gap: 12px; padding: 0 15px; color: var(--text); font-size: 16px; }
 
         .right-zone {
             position: absolute; width: 310px; height: 40px; bottom: 10px;
@@ -72,26 +90,50 @@
         .icon { color: var(--accent); font-size: 22px; }
 
         /* --- 狀態切換 --- */
-        .state-simplified .main-bg { opacity: 0; transform: scale(0.9); }
-        .state-simplified .left-zone { width: 56px; height: 56px; background: var(--glass); border-radius: 28px; top: 22px; transform: translateX(-120px); }
+
+        /* 1. 簡化模式 - 補上強化的陰影 */
+        .state-simplified .main-bg { opacity: 0; transform: scale(0.9); box-shadow: none; }
+        .state-simplified .left-zone { 
+            width: 56px; height: 56px; background: var(--glass); 
+            border-radius: 28px; top: 22px; transform: translateX(-120px);
+            box-shadow: 0 8px 25px var(--shadow); /* 補回陰影 */
+            backdrop-filter: blur(30px);
+        }
         .state-simplified .domain-text { opacity: 0; width: 0; }
-        .state-simplified .right-zone { width: 220px; height: 56px; background: var(--glass); border-radius: 28px; bottom: 22px; transform: translateX(35px); }
+        .state-simplified .right-zone { 
+            width: 220px; height: 56px; background: var(--glass); 
+            border-radius: 28px; bottom: 22px; transform: translateX(35px);
+            box-shadow: 0 8px 25px var(--shadow); /* 補回陰影 */
+            backdrop-filter: blur(30px);
+        }
 
-        .is-menu-open .left-zone { width: 200px; height: 220px; border-radius: 28px; background: white; transform: translateX(-60px) translateY(-145px); }
+        /* 2. 彈出選單 */
+        .is-menu-open .left-zone { 
+            width: 210px; height: 230px; border-radius: 28px; 
+            background: var(--menu-bg); transform: translateX(-55px) translateY(-150px);
+            box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+        }
         .is-menu-open .menu-content { opacity: 1; visibility: visible; }
+        .is-menu-open .left-header { border-bottom: 1px solid var(--inner); }
 
-        /* 縮小狀態 */
-        .state-compact .main-bg { width: 140px; height: 44px; border-radius: 22px; cursor: pointer; }
-        .state-compact .left-zone { width: 140px; height: 44px; top: 28px; background: transparent; transform: translateX(0); cursor: pointer; }
+        /* 3. 縮小狀態 */
+        .state-compact .main-bg { width: 140px; height: 44px; border-radius: 22px; box-shadow: 0 4px 15px var(--shadow); }
+        .state-compact .left-zone { width: 140px; height: 44px; top: 28px; background: transparent; transform: translateX(0); box-shadow: none; }
         .state-compact .favicon { display: none; }
         .state-compact .domain-text { font-size: 14px; font-weight: 600; opacity: 1; width: auto; }
         .state-compact .right-zone { opacity: 0; transform: scale(0.5); pointer-events: none; }
+        
+        /* 深色模式下 Logo 的微調 */
+        @media (prefers-color-scheme: dark) {
+            .favicon { filter: invert(1) brightness(2); }
+            .is-menu-open .left-zone { border: 0.5px solid rgba(255,255,255,0.1); }
+        }
     </style>
 </head>
 <body id="app-root">
 
     <div id="web-wrapper">
-        <iframe src="https://en.m.wikipedia.org/wiki/Liquid"></iframe>
+        <iframe src="https://en.m.wikipedia.org/wiki/Dark_mode"></iframe>
     </div>
 
     <div id="global-overlay"></div>
@@ -129,7 +171,6 @@
 
         favIcon.src = `https://www.google.com/s2/favicons?domain=wikipedia.org&sz=64`;
 
-        // 更新狀態函式
         function updateUIState(newState) {
             currentState = newState;
             navRoot.className = 'safari-wrapper' + 
@@ -137,25 +178,19 @@
                 (currentState === 'simplified' ? ' state-simplified' : '');
         }
 
-        // 1. 滾動偵測：縮小與「反向滑動恢復」
         window.addEventListener('scroll', () => {
             const currentScrollY = window.scrollY;
             const diff = currentScrollY - lastScrollY;
 
-            // 向上捲動 (網頁往下滑) -> 縮小
             if (currentScrollY > 60 && diff > 5 && currentState !== 'compact') {
                 if (currentState !== 'compact') prevState = currentState;
                 updateUIState('compact');
-            } 
-            // 向下捲動 (反向滑動，網頁往回看) -> 恢復
-            else if (diff < -15 && currentState === 'compact') {
+            } else if (diff < -15 && currentState === 'compact') {
                 updateUIState(prevState);
             }
-
             lastScrollY = currentScrollY;
         });
 
-        // 2. 點擊區塊恢復 (僅在縮小狀態生效)
         pill.addEventListener('click', (e) => {
             if (currentState === 'compact') {
                 updateUIState(prevState);
@@ -163,7 +198,6 @@
             }
         });
 
-        // 3. 彈出選單 (僅簡化模式點擊 Logo)
         document.getElementById('logo-btn').addEventListener('click', (e) => {
             if (currentState === 'simplified') {
                 root.classList.add('is-menu-open');
@@ -171,31 +205,20 @@
             }
         });
 
-        // 4. 左右滑動切換
-        pill.addEventListener('touchstart', e => {
-            startX = e.touches[0].clientX;
-        });
+        pill.addEventListener('touchstart', e => { startX = e.touches[0].clientX; });
 
         pill.addEventListener('touchend', e => {
             if (root.classList.contains('is-menu-open') || currentState === 'compact') return;
             const diffX = e.changedTouches[0].clientX - startX;
             if (Math.abs(diffX) > 50) {
-                if (diffX > 50 && currentState === 'normal') {
-                    updateUIState('simplified');
-                } else if (diffX < -50 && currentState === 'simplified') {
-                    updateUIState('normal');
-                }
+                if (diffX > 50 && currentState === 'normal') updateUIState('simplified');
+                else if (diffX < -50 && currentState === 'simplified') updateUIState('normal');
             }
         });
 
         const closeMenu = () => root.classList.remove('is-menu-open');
         document.getElementById('global-overlay').addEventListener('touchstart', closeMenu);
-        
-        // 阻擋誤觸
-        pill.addEventListener('touchmove', e => {
-            if (currentState !== 'compact') e.preventDefault();
-        }, { passive: false });
-
+        pill.addEventListener('touchmove', e => { if (currentState !== 'compact') e.preventDefault(); }, { passive: false });
     </script>
 </body>
 </html>
